--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -81,7 +81,7 @@ h1, h2, h3 {
   .noteCtnr {
     width: 100%;
     padding: .5em;
-    box-shadow: inset 0px 2px 4px  rgba(0,0,0,.25);
+    box-shadow: inset 0 2px 4px  rgba(0,0,0,.25);
     background-color: #EEE;
   }
   .card-footer {
@@ -109,35 +109,46 @@ h1, h2, h3 {
 
 .transcript {
   .question {
-    border-top: 1px solid #DDD;
+    border: 1px solid #DDD;
+    margin: 1em 0;
+    .text {
+      padding: .5em;
+    }
 
-    .note{
+    .questionSection{
       display: flex;
       align-content: stretch;
       flex-direction: row;
       align-items: center;
+      padding: 0.5em;
+      border-top: 1px solid #DDD;
 
-      background-color: #DDD;
-      font-style: italic;
-      border: 1px solid #EFEFEF;
-      margin: 0.2em;
-      padding: 0.4em;
-      border-radius: 0.4em;
-      font-size: 0.8em;
       h6 {
         flex-grow: 0;
         margin: 0.5em 0.5em .5em 0;
+        border-right: 1px solid #DDD;
+        width: 5em;
       }
       .text {
         flex-grow: 1;
       }
     }
 
-    .answer {
-      font-weight: bold;
-      text-align: right;
-      background-color: #FFE;
-      padding: 0.2em;
+    .questionSectionNote {
+      background-color: #EEE;
+
+      .text {
+        font-style: italic;
+        font-size: 0.9em;
+      }
+    }
+
+    .questionSectionAnswer {
+      background-color: #f0f8ff;
+      .text {
+        font-weight: bold;
+        text-align: right;
+      }
     }
   }
 }
