--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -36,7 +36,7 @@
             <a href="@routes.InterviewCtrl.downloadTags" class="btn btn-primary">
               <i class="fa fa-download"></i>&nbsp;Download Policy as JSON
             </a>
-            <a href="@routes.InterviewCtrl.transcript(session.kit.id.modelId, session.kit.id.version)" class="btn btn-primary">
+            <a href="@routes.InterviewCtrl.transcript(session.kit.id.modelId, session.kit.id.version, None)" class="btn btn-primary">
               <i class="fa fa-book"></i>&nbsp;Interview Transcript
             </a>
           </div>
