--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -12,6 +12,13 @@
     </div>
   </div>
   <div class="row my-2">
+    <div class="col text-center">
+      <a href="@routes.InterviewCtrl.transcript(session.kit.id.modelId, session.kit.id.version, None)" class="btn btn-primary">
+        <i class="fa fa-book"></i>&nbsp;Interview Transcript
+      </a>
+    </div>
+  </div>
+  <div class="row my-2">
     <div class="col">
       <div class="card">
         <div class="card-header">
